K8s/base/currency/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  labels:
    app: currencyservice
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
    - name: tcp-service
      port: 8080
      targetPort: 8080
