K8s/base/currency/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: recommendationservice
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: opentelemetry-demo-otelcol
      ports:
        - port: 4317
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
